added navbar for easy navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<nav>
+  <span class="title-nav">File-Parser™</span>
+  <div class="links-container">
+    <button mat-button><a routerLink="/files">Home</a></button>
+    <button mat-button><a routerLink="/files/spec">Spec</a></button>
+    <button mat-button><a routerLink="/files/flat">Flat</a></button>
+    <button mat-button><a routerLink="/dashboard">Dashboard</a></button>
+  </div>
+</nav>
 <router-outlet></router-outlet>
