--- a/src/app/file-list/file-list.component.scss
+++ b/src/app/file-list/file-list.component.scss
@@ -5,10 +5,18 @@ mat-list-item {
     margin-bottom: .7rem;
 }
 
+.records-btn {
+    float: right;
+    background-color: green;
+    color: white;
+}
+
 .download-btn {
     float: right;
     background-color: green;
     color: white;
+    margin-left: .5rem;
+
 }
 
 mat-card {
