--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -1,14 +1,19 @@
-@if (records.length) {
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  
+<div class="mat-elevation-z8" [hidden]="this.records.length === 0">
+  <table mat-table [dataSource]="this.dataSource" matSort>
     @for (column of displayedColumns; track column) {
-      <ng-container [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.data[column]}} </td>
-      </ng-container>
+    <ng-container [matColumnDef]="column">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+      <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+    </ng-container>
     }
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-}
+  <mat-paginator
+    [pageSizeOptions]="[2, 10]"
+    showFirstLastButtons
+    aria-label="Select page of records"
+  >
+  </mat-paginator>
+</div>
