--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,12 @@
 nav {
-    position: fixed;
+    position: absolute;
     top: 0px;
     width: 100%;
     height: 4rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 3rem;
     box-shadow: 0px -10px 15px 0px rgba(0,0,0,0.75);
     .title-nav {
         font-family: 'Roboto';
