--- a/src/app/fileupload/fileupload.component.scss
+++ b/src/app/fileupload/fileupload.component.scss
@@ -14,6 +14,12 @@ ul {
     border-radius: 1rem;
     padding: 1rem;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.45);
+    .empty {
+      width: 15rem;
+    }
+    .active {
+      width: 10rem;
+    }
     label {
         cursor: pointer;
     }
