--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,11 @@ app-root {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 3rem;
 }
 
 html, body {
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
-    padding: 0;
+    padding-bottom: 2rem;
 }
