--- a/src/app/records/records.component.html
+++ b/src/app/records/records.component.html
@@ -11,7 +11,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <mat-paginator
-    [pageSizeOptions]="[2, 10]"
+    [pageSizeOptions]="[2, 4, 6, 10]"
     showFirstLastButtons
     aria-label="Select page of records"
   >
