--- a/src/app/fileupload/fileupload.component.scss
+++ b/src/app/fileupload/fileupload.component.scss
@@ -14,18 +14,23 @@ ul {
     border-radius: 1rem;
     padding: 1rem;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.45);
-    .empty {
-      width: 15rem;
-    }
-    .active {
-      width: 10rem;
-    }
     label {
         cursor: pointer;
     }
     button {
         width: 10rem;
     }
+    span {
+      float: right;
+    }
+  }
+
+  .active {
+    width: 7rem;
+  }
+
+  .empty {
+    width: 15rem;
   }
 
   .file-control {
